# rs_web_server

./: Cargo.toml  diesel.toml
src/: main.rs
src/controllers/: user.rs
src/database/: connection.rs  data_source.sqlite  mod.rs
src/database/migrations/2024-02-13-044430_users/: up.sql
src/database/schemas/: user.rs
src/repository/: user.rs
