[package]
name = "ntex"
version = "0.1.0"
edition = "2021"

[dependencies]
ntex = { version = "1.0.0", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.1.4", features = ["sqlite","r2d2"] }
log = "0.4.20"
env_logger = "0.11.1"
libsqlite3-sys = { version = "0.27.0", features = ["bundled"] }
dotenvy = "0.15"
r2d2 = "0.8.10"